[package]
name = "beepy-display"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Embedded graphics DrawTarget for Beepy"
repository = "https://github.com/chamik/beepy-display"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.8.1"
framebuffer = "0.3.1"
thiserror = "1.0.56"
